# ScenarioGenerator

./: .clang-tidy  .gitignore  .gitmodules  BUILDING  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: linux_analysis.yml  publish_commit_id.yml  run_clang_tidy.yml  windows_build_test_and_push.yml
data/: readme.txt  version.txt
data/test_files/Ck3worldTitlesimporterTests/TitlesCanBeImported/game/history/titles/: title_file_one.txt  title_file_two.txt
docs/: release_checklist.txt  style_guide.txt
src/: hello_world.cpp  hello_world.hpp  hello_world_test.cpp  main.cpp
src/ck3_world/: titles_importer.cpp  titles_importer.hpp  titles_importer_tests.cpp
src/output/ck3/: output_titles.cpp  output_titles.hpp  output_titles_tests.cpp
